methods.args.MethodsArgs.scala.code
move(nbPas:Int,versLAvant:Boolean){
nbpas=5
if (versLAvant==true){
  avance()
}
}